# cmake_tutorial

./: .gitignore  LICENSE  README.md
cmake/: CMakeLists.txt
cmake/src/app/: CMakeLists.txt  cvimage_app.cpp  image_app.cpp
cmake/src/image/: CMakeLists.txt
cmake/src/image/include/image/: image.hpp
cmake/src/image/src/: image.cpp  image_utils.cpp  image_utils.hpp
gcc/example1/: helloworld.cpp
gcc/example2/mylib/: helloworld.cpp
make/: Makefile  main.cpp
make/mylib/: helloworld.hpp
